Move jQuery to the header, filthy web devs Added progress bars to the projects page. Bower helped by putting in a bunch of other crap in as well Did the styling for the headers and progress bars Added my terrible, temperary mug Created a sloppy JSON to manage milestones Fixed the hack to added the projects page. It doesn't break on page switches, hotlinks, or refreshes.

--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,7 @@ pre.highlight code,
   white-space: pre-wrap;
 }
 
-.btn, 
+.btn,
 .navigation__item a {
   margin: 5px 0;
   white-space: nowrap;
@@ -53,4 +53,48 @@ pre.highlight code,
   height: 100px;
   border: 3px solid #fff;
   border-radius:100%;
+}
+
+
+.project-header{
+  margin-bottom: -.3em;
+  font-size: 2.5em;
+}
+.project-divider{
+  width: 100%;
+	margin: 2.2em 0 2.1em 0;
+	border-top: 1px solid #dddddd;
+}
+
+.project-overallPB{
+  margin-bottom:1em;
+}
+
+.team-member{
+  margin-top: .3em;
+  width:33%;
+  float:left;
+}
+
+.team-member-text{
+  text-align: center;
+}
+
+.team-member-icon{
+  width: 150px;
+	height: 150px;
+
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: -1em;
+
+	border-radius: 75px;
+	-webkit-border-radius: 75px;
+	-moz-border-radius: 75px;
+}
+
+
+h1 > small{
+	color:grey;
+	font-size:large;
 }
